MNK-974, adapted from trunk 12071